welcome.lessons.welcome.array.island.Island.scala.error
island:13: error: type mismatch;
 found   : Unit
 required: Int
				T(i)=lissageBas(T(i-1),T(i),T(i+1))
                                               ^